<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_first_screen"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.first_screen.FirstScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/root_padding"
            android:contentDescription="@string/desc_image_profile"
            android:src="@drawable/ic_photo"
            app:layout_constraintBottom_toTopOf="@id/layout_edt_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_name"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/root_padding"
            android:layout_marginTop="@dimen/size_distance_edt_to_image"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/layout_edt_palindrome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_height_edt"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapSentences"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_palindrome"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/root_padding"
            android:layout_marginTop="@dimen/size_distance_edt"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/btn_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_edt_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_palindrome"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_height_edt"
                android:hint="@string/hint_palindrome"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/root_padding"
            android:layout_marginTop="@dimen/size_distance_btn_to_edt"
            android:text="@string/check"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_edt_palindrome" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/root_padding"
            android:layout_marginVertical="@dimen/root_padding"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_check" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>